# wayne.github.io

./: .env.example  .gitignore  BD054_应援活动v2_测试分析报告.md  BD054_应援活动v2_测试用例_Excel.csv  BD054_应援活动v2_测试用例_XMind.md  BD054_应援活动v2_测试用例_飞书文档版.md  MCP排查指南.txt  MCP深度排查指南.txt  MCP配置修复指南.txt  OpenClaw使用指南.md  OpenClaw飞书插件使用指南.md  README.md  SESSION-STATE.md  analyze_chat.ps1  analyze_chat.py  analyze_events.ps1  analyze_events.py  analyze_with_json.py  check-trae-mcp.ps1  check_excel.py  ci_report.html  ci_report.json  config-example.yaml  config_diff.py  events_full.csv  feishu_bot.py  feishu_bot_requirements.txt  feishu_bot_simple.py  feishu_cli_bot.py  feishu_robot_requirements.txt  feishu_robot_sdk.py  feishu_sheets_processor.py  generate_samples.py  get_wiki_likes.py  google_sheet_helper.py  import_from_excel.py  import_from_text.py  jira_to_feishu.py  mcp-diagnostic.ps1  mcp-fixed.json  (+24 more)
.agents/skills/jira_to_feishu/: SKILL.md
.agents/skills/jira_to_feishu/scripts/: jira_to_feishu.py
.agents/skills/sensight/: SKILL.md
.agents/skills/sensight/scripts/: auth.py
.github/workflows/: config-diff.yml
.trae-cn/skills/sensight/scripts/: sensight.py
blog/: .gitignore  admin.html  index-minimal.html  index.html  server.py  使用说明.md  技术文档.md  样式修改说明.md  测试报告.md  部署指南.md
blog/css/: style-minimal.css
blog/data/: posts.json
blog/js/: admin.js  app-minimal.js  app.js
css/: admin.css  style.css
data/: posts.json
js/: admin.js  app-minimal.js
memory/: 2026-04-13.md
src/config_diff_tool/: cli.py  config.py  differ.py  reader.py  reporter.py
